Fix broken interface due to menu

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@300;400;500&display=swap');
+:root{
+    --lg-font: 'Kaisei Tokumin', serif;
+    --sm-font: 'Poppins', sans-serif;
+    --blue: #343de5;
+    --red: rgb(255, 0, 0);
+    --header-font: 'Oswald', serif;
+    --grey: #787ba0;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -270,4 +280,84 @@ footer .end span{
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+/* menu profile */
+/* Tài khoản */
+#btn-3:hover{
+    color: #787ba0;
+}
+#btn-3:hover #subMenu {
+    visibility: visible;
+    opacity: 1;
+}
+#btn-3.active #subMenu {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu-profile{
+    font-family: var(--header-font)!important;
+    position: absolute;
+    top: 125%;
+    left: 50%;
+    margin-left: -212px;
+    background: var(--grey)!important;
+    width: 250px;
+    box-sizing: 0 5px 25px rbga(0, 0, 0, 0.1);
+    border-radius: 15px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.menu-profile::before{
+    content: '';
+    position: absolute;
+    top: -5px;
+    right: 28px;
+    width: 20px;
+    height: 20px;
+    background: var(--grey)!important;
+    transform: rotate(45deg);
+}
+
+.menu-profile h3{
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+    padding: 20px 0;
+    font-weight: 500;
+    font-size: 18px;
+    color: #000000;
+    line-height: 1.2em;
+}
+.menu-profile h3 span{
+    font-size: 14px;
+    color: #000000;
+    font-weight: 400;
+}
+.menu-profile ul li{
+    list-style: none;
+    padding: 10px 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    display: flex;
+    align-items: center;
+}
+.menu-profile ul li img{
+    max-width: 20px;
+    margin-right: 10px;
+    opacity: 0.5s;
+}
+.menu-profile ul li:hover img{
+    opacity: 1;
+}
+.menu-profile ul li a{
+    display: inline-block;
+    text-decoration: none;
+    color: #000000;
+    font-weight: 500;
+}
+.menu-profile ul li:hover a{
+    color: var(--blue)!important;
 }
